2012-04-27  Gavin Peters  <gavinp@chromium.org>

        Add new ENABLE_LINK_PRERENDER define to control the Prerendering API
        https://bugs.webkit.org/show_bug.cgi?id=84871

        Reviewed by Adam Barth.

        Prerendering is currently covered by the ENABLE_LINK_PREFETCH macro, but the new Prerendering
        API separates it from prefetching.  Having separate include guards lets ports enable prefetching,
        a relatively easy change, without needing to build the infrastructure for prerendering, which
        is considerably more complicated.

2012-04-27  Dimitri Glazkov  <dglazkov@chromium.org>

        Unreviewed, rolling out r115433.
        http://trac.webkit.org/changeset/115433
        https://bugs.webkit.org/show_bug.cgi?id=85052

        Enable unit tests again.

        * tests/PopupMenuTest.cpp:
        (WebKit::TEST_F):

2012-04-27  Dimitri Glazkov  <dglazkov@chromium.org>

        Unreviewed, rolling out r115421.
        http://trac.webkit.org/changeset/115421
        https://bugs.webkit.org/show_bug.cgi?id=85052

        Enable unit tests again.

        * tests/PopupMenuTest.cpp:
        (WebKit::TEST_F):

2012-04-27  Dimitri Glazkov  <dglazkov@chromium.org>

        Unreviewed, rolling out r115400.
        http://trac.webkit.org/changeset/115400
        https://bugs.webkit.org/show_bug.cgi?id=84420

        Broke unit tests.

        * src/ChromeClientImpl.cpp:
        (WebKit::ChromeClientImpl::popupOpened):
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::applyAutofillSuggestions):

2012-04-27  Gavin Peters  <gavinp@chromium.org>

        [Chromium] Remove Webkit/chromium/public/WebReferrerPolicy.h thunk.
        https://bugs.webkit.org/show_bug.cgi?id=84552

        After http://codereview.chromium.org/10139023/ lands, this thunk is no
        longer needed.

        Reviewed by Adam Barth.

        * WebKit.gyp:
        * public/WebReferrerPolicy.h: Removed.

2012-04-27  Marcus Bulach  <bulach@chromium.org>
